# DesignPatterns

./: .gitignore  README.md  factory.js
cpp/: 1-1-0Factory.cpp  1-1-1Factory-尝试向工厂方法中添加新类产生的副作用.cpp  1-1-2Factory-利用模版消除副作用.cpp  1-1Factory.cpp  1-2AbstractFactory.cpp  1-3-1sigleton.cpp  1-3Singleton.cpp  1-4Builder.cpp  1-ObjectPool.cpp  1-Prototype.cpp  2-1-1Adapter .cpp  2-1.md  2-1Adapter.cpp  2-2Bridge.cpp  2-3-1Decorator.cpp  2-3-wiki-dymnic.cpp  2-3-wiki-static.cpp  2-3-wiki.cpp  2-3.md  2-3Decorator.cpp  2-4composite2.cpp  2-proxy.cpp  3-Mediator-2.cpp  3-proxy-WIKI.cpp  3-strategy.cpp  CMakeLists.txt  Dynamic_Decorator.cpp  readme.md
cpp/1-factory/: readme.md
cpp/1-factory/1-factory/: product.h
cpp/1-factory/2-factory-befor-and-after/: a.out  after.cpp  befor.cpp  factory.cpp  myfactory.cpp
cpp/1-factory/3-factory/: app.h  doc.h  myapp.cpp  mydoc.cpp
cpp/1-factory/4-factory-manger/: CMakeLists.txt  app.h  doc.h  main.cpp  manager.cpp  myapp.cpp
cpp/2-abstractfactory/: abstractfactory.cpp  product.cpp
cpp/3-singletion/: sigleton.cpp
cpp/4-builder/: Builder.cpp  readme.md
cpp/test-Of-mudel/: VirtualDestructor.cpp
cpp/test-Of-mudol/: VirtualDestructor.cpp  protect.cpp  readme.md  test.md
cpp11/AbstractFactory/: main.cpp
cpp11/Adapter/: main.cpp
cpp11/Bridge/: main.cpp
cpp11/Builder/: main.cpp
cpp11/ChainOfResponsibility/: main.cpp
cpp11/FactoryMethod/: main.cpp
cpp11/Prototype/: main.cpp
cpp11/SimpleFactory/: main.cpp
cpp11/Singleton/: main.cpp
cpp11/State/: main.cpp
java/: Readme.txt
python_test/1-factory/: factory.py
(+15 files in other folders)
